--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -4,7 +4,10 @@ name: Integration Tests
 on:
   # schedule:
   # * is a special character in YAML, so you have to quote this string
-  - cron: "0 3 * * 1-5" # run integration tests at 3 AM, monday to friday (1-5)
+  # - cron: "0 3 * * 1-5" # run integration tests at 3 AM, monday to friday (1-5)
+  push: 
+    branches:
+    - feat/47/add-tests
 
   workflow_dispatch: # run integration tests only when triggered manually
 
