fix(actions): fix template names in the chart - use `name` instead of `prefix` in the helm chart values Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/test/data/podtatohead.jes-config.yaml
+++ b/test/data/podtatohead.jes-config.yaml
@@ -23,7 +23,7 @@ actions:
                 "--set", "keptn.stage=$(KEPTN_STAGE)",
                 "--set", "keptn.service=$(KEPTN_SERVICE)",
                 "--set", "keptn.deployment=direct",
-                "--set", "prefix=$(KEPTN_SERVICE)",
+                "--set", "name=$(KEPTN_SERVICE)",
                 "--wait"
         ]
 
