--- a/test/data/podtatohead.jes-config.yaml
+++ b/test/data/podtatohead.jes-config.yaml
@@ -17,7 +17,7 @@ actions:
         cmd: [ "helm" ]
         args: [ "upgrade", "--install",
                 "--create-namespace", "-n", "$(KEPTN_PROJECT)-$(KEPTN_STAGE)",
-                "$(KEPTN_SERVICE)", "/keptn/charts/$(KEPTN_SERVICE).tgz",
+                "$(KEPTN_SERVICE)", "/keptn/charts/podtatoserver.tgz",
                 "--set", "image=$(IMAGE)",
                 "--set", "keptn.project=$(KEPTN_PROJECT)",
                 "--set", "keptn.stage=$(KEPTN_STAGE)",
