--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -22,7 +22,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        keptn-version: ["0.15.1", "0.16.0", "0.17.0", "0.18.1"] # https://github.com/keptn/keptn/releases
+        # keptn-version: ["0.15.1", "0.16.0", "0.17.0", "0.18.1"] # https://github.com/keptn/keptn/releases
+        keptn-version: ["0.18.1"]
         datadog-version: ["2.37.2"] # chart version
     env:
       GO_VERSION: 1.17
@@ -183,9 +184,9 @@ jobs:
           echo '{"Test": "TestGitHub Pipeline", "Action": "fail"}' >> $TEST_REPORT_FILENAME
 
 
-      # # Uncomment this for debugging (`cd && touch continue` to continue execution of the workflow) 
-      # - name: Debugging with ssh
-      #   uses: lhotari/action-upterm@v1
+      # Uncomment this for debugging (`cd && touch continue` to continue execution of the workflow) 
+      - name: Debugging with ssh
+        uses: lhotari/action-upterm@v1
 
       - name: Run Integration tests
         env:
