--- a/examples/keptn-values.yaml
+++ b/examples/keptn-values.yaml
@@ -24,3 +24,8 @@ control-plane:
     type: LoadBalancer
   features:
     automaticProvisioningURL: http://keptn-gitea-provisioner-service.default
+# For Keptn 0.18 (to make room for more CPU)
+statisticsService:
+  enabled: false
+webhookService:
+  enabled: false
