--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -103,8 +103,8 @@ jobs:
             --set gitea.admin.password=${GITEA_ADMIN_PASSWORD} \
             --wait
 
-      # - name: Debugging with ssh
-      #   uses: lhotari/action-upterm@v1
+      - name: Debugging with ssh
+        uses: lhotari/action-upterm@v1
 
       - name: Install Keptn
         id: install_keptn
